Fix text-align title

--- a/src/stylesheets/header.scss
+++ b/src/stylesheets/header.scss
@@ -8,10 +8,9 @@
 	flex-direction: row;
 	justify-content: flex-start;
 	align-items: center;
-	padding-left: 8rem;
 
 	.navigator-item {
-		font-size: 16px;
+		font-size: 1rem;
 		text-transform: uppercase;
 		color: white;
 		letter-spacing: 4px;
