--- a/src/stylesheets/piano_dashboard.scss
+++ b/src/stylesheets/piano_dashboard.scss
@@ -6,6 +6,24 @@
   justify-content: center;
 }
 
+.chord-label-section {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 7px;
+}
+
+.chord-label {
+  color: #E0E0E0;
+  letter-spacing: 2px;
+  text-align: center;
+  font-size: 3rem;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
 .notes-list-section {
   display:flex;
   flex-direction: column;
@@ -35,11 +53,10 @@
     color: #E0E0E0;
     min-width: 100px;
     min-height: 55px;
-    margin: 2px 0px;
     font-family: monospace;
     font-size: 2rem;
+    margin: 2px 0px;
     border-right: 4px solid #1D1D1D;
-    
     cursor: pointer;
   
     &:hover{
@@ -104,22 +121,6 @@
 
 .list-item--active{
   background-color: lighten(#DD2C00, 10) !important;
-}
-
-.chord-label-section {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  margin: 7px;
-}
-
-.chord-label {
-  color: #E0E0E0;
-  letter-spacing: 2px;
-  font-size: 42px;
-  font-weight: bold;
-  margin-bottom: 10px;
 }
 
 .chord-notes-section {
